<resources>
    <string name="app_name">轻天气</string>
    <string name="string_menu_item_refresh">刷新</string>
    <string name="str_menu_item_switch_download_img">下载图片</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">基本设置</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_city_name">城市名称</string>
    <string name="pref_default_city_name">漳州</string>

    <string name="pref_title_temp_unit">温度单位设置</string>
    <string-array name="pref_temp_unit_list_titles">
        <item>摄氏度</item>
        <item>华氏度</item>
    </string-array>
    <string-array name="pref_temp_unit_list_values">
        <item>摄氏度</item>
        <item>华氏度</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据与更新</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_menu_item_setting">设置</string>
    <string name="str_nav_download_img">下载图片</string>
    <string name="str_nav_find_city">切换城市</string>
    <string name="str_hint_findcity">搜索国内外城市</string>
    <string name="str_button_findcity">查找城市</string>
    <string name="str_editText_find_city" />
    <string name="string_nav_wicked_mod">缺德天气模式</string>
    <string name="string_wicked_mode">七天中将会有一天的天气是假的，是否开启此功能？</string>
    <string name="string_wolf">狼人杀</string>
    <string name="string_locate">地图定位</string>
</resources>
